🍲🐊 Checkpoint ./server.js:3564056/822:3916937/281 ./config.json:3916937/68

--- a/config.json
+++ b/config.json
@@ -11,22 +11,22 @@
   "runSpeed": 1,
   "maxHeartbeatInterval": 300000,
   "verbose": true,
-  "WIDTH": 5000,
-  "HEIGHT": 5000,
-  "MODE": "ffa",
+  "WIDTH": 2500,
+  "HEIGHT": 2500,
+  "MODE": "tdm",
   "RANDOM_COLORS": false,
   "BANNED_CHARACTER_REGEX": "/[\uFDFD\u200E\u0000]/gi", 
   "ROOM_SETUP": [
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "bap1", "bas1", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
+    [ "bas1", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
     [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
     [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
     [ "norm", "norm", "norm", "norm", "nest", "nest", "norm", "norm", "norm", "norm" ],
     [ "norm", "norm", "norm", "norm", "nest", "nest", "norm", "norm", "norm", "norm" ],
     [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
     [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ],
-    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm" ]
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "bas2" ],
+    [ "norm", "norm", "norm", "norm", "norm", "norm", "norm", "norm", "bas2", "bap2" ]
   ],
   "X_GRID": 10,
   "Y_GRID": 10,
